--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Password Generator</title>
-        <link rel="stylesheet" href="styles.css">        
+        <link rel="stylesheet" href="./styles.css">        
     </head>
     <body>
         <div class="container">
             <h1>Password Generator</h1>
-            <div>
+            <div class="container-all">
                 <h2>Generate a Password</h2>
                 <hr>
                 <div class="password-container">
